--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('zones') }}">Zones</a></li>
+                    <li><a href="{{ url_for('runNow') }}">Run Now</a></li>
                     <li><a href="{{ url_for('data') }}">Data</a></li>
                     <li><a href="{{ url_for('plot') }}">Plot</a></li>
                 </ul>
