--- a/app/templates/run_now.html
+++ b/app/templates/run_now.html
@@ -18,7 +18,7 @@
       </div>
     {% endif %}
 
-    <form method='post' class="navbar-form navbar-left">
+    <form method='post'>
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.zone.label }}:
