--- a/app/templates/zones.html
+++ b/app/templates/zones.html
@@ -24,11 +24,17 @@
       {% for zone in form.zones %}
         <div class="panel panel-default">
           <div class="panel-heading">Zone {{ zone.number.data }}</div>
-          <div class="form-check">{{ zone.disabled(class="form-check-input") }} {{ zone.disabled.label(class="form-check-label") }}</div>
           <div class="form-group">{{ zone.alias.label }}: {{ zone.alias(class="form-control") }}</div>
-          <div class="form-group">{{ zone.interval_days.label }}: {{ zone.interval_days(class="form-control") }}</div>
-          <div class="form-group">{{ zone.scheduled_time.label }}: {{ zone.scheduled_time(class="form-control") }}</div>
-          <div class="form-group">{{ zone.duration_minutes.label }}: {{ zone.duration_minutes(class="form-control") }}</div>
+        </div>
+      {% endfor %}
+      {% for sched in form.schedules %}
+        <div class="panel panel-default">
+          <div class="panel-heading">Schedule {{ sched.number.data }}</div>
+          <div class="form-check">{{ sched.disabled(class="form-check-input") }} {{ sched.disabled.label(class="form-check-label") }}</div>
+          <div class="form-group">{{ sched.zone.label }}: {{ sched.zone(class="form-control") }}</div>
+          <div class="form-group">{{ sched.interval_days.label }}: {{ sched.interval_days(class="form-control") }}</div>
+          <div class="form-group">{{ sched.scheduled_time.label }}: {{ sched.scheduled_time(class="form-control") }}</div>
+          <div class="form-group">{{ sched.duration_minutes.label }}: {{ sched.duration_minutes(class="form-control") }}</div>
         </div>
       {% endfor %}
       {{ form.submit(class="btn btn-primary") }}
