--- a/app/templates/plot.html
+++ b/app/templates/plot.html
@@ -3,11 +3,14 @@
 {% block content %}
     <h1>Water</h1>
     <div id="chart" class="chart"></div>
+{% endblock content %}
 
+{% block scripts %}
+    {{ super() }}
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script type="text/javascript">
         var graphs = {{plot_json | safe}};
         Plotly.plot('chart', graphs, {});
     </script>
-{% endblock content %}
+{% endblock %}
 
