--- a/app/templates/run_now.html
+++ b/app/templates/run_now.html
@@ -22,12 +22,7 @@
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.zone.label }}:
-            {% for subfield in form.zone %}
-                <tr>
-                    <td>{{ subfield(class="form-check-input") }}</td>
-                    <td>{{ subfield.label(class="form-check-label") }}</td>
-                </tr>
-            {% endfor %}
+            {{ form.zone(class="form-control") }}
         </div>
         <div class="form-group">{{ form.duration.label }}: {{ form.duration(class="form-control") }}</div>
         {{ form.submit(class="btn btn-primary") }}
